# Two-Player-Games

./: .gitignore  README.md  chess.js  index.html  shell.nix  table_values.rs
.github/workflows/: pages.yml
gui/: Cargo.toml  example.schem  index.html
gui/src/: demo.rs  game.rs  lib.rs  main.rs  menu.rs  root.rs
gui/src/ai/: alphabeta.rs  mod.rs  null.rs  random.rs
gui/src/ai/alphabeta/: mod.rs  multithreaded.rs  singlethreaded.rs
gui/src/chess/: game.rs  ui.rs
gui/src/demo/: headless.rs  mod.rs
gui/src/demo/cube/: mod.rs  shader.wgsl
gui/src/demo/texture_to_egui/: mod.rs  shader.wgsl
gui/src/demo_old/: headless.rs  mod.rs  texture.rs
gui/src/demo_old/cube/: mod.rs
gui/src/demo_old/texture_to_egui/: mod.rs  shader.wgsl
gui/src/grid/: chess.rs  mod.rs  ui.rs
gui/src/grid/chess/: constants.rs  make_constants.py  mod.rs
